--- a/css/nedzink.css
+++ b/css/nedzink.css
@@ -1,10 +1,14 @@
 
 
 body {
+  opacity: 0;
   padding-top: env(safe-area-inset-top);
   padding-bottom: env(safe-area-inset-bottom);
   padding-left: env(safe-area-inset-left);
   padding-right: env(safe-area-inset-right);
+}
+body.all-loaded {
+  opacity: 1;
 }
 .scroll-top {
 
