--- a/css/my-css.css
+++ b/css/my-css.css
@@ -483,7 +483,27 @@ background-size: cover; /* Resize the background image to cover the entire conta
 /* #endregion */
 
 /* #region Navbar MOBILE & TABLET */
+
+
 @media only screen and (max-width: 992px) {
+
+  ul.dropdown-menu.show {
+    position:unset!important;
+    margin: unset!important;
+    transform: unset!important;
+    -webkit-transform: unset!important;
+    -moz-transform: unset!important;
+    -ms-transform: unset!important;
+    -o-transform: unset!important;
+  }
+#side-menu .nav-link, .dropdown-item {
+  font-size: 10px;
+  font-weight: lighter;
+}  
+#side-menu {
+  padding: 10px;
+  background-color: rgb(26, 26, 26);
+}
 .top-header {
   display: none;
 }
@@ -510,14 +530,21 @@ background-size: cover; /* Resize the background image to cover the entire conta
   margin-left: 2rem;
 
 }
-
+.close {
+  border: none;
+ background-color: transparent;
+ color: white;
+ position: absolute;
+ right: 20px;
+ top: -10px;
+ font-size: 70px;
+}
 .navbar-collapse {
   height: 100vh;
   overflow-y:scroll;
 }
 .navbar-nav {
-height: 80vh;
-  overflow-y:scroll;
+
     background-color: rgba(26, 26, 26, 1)!important;
 }
 .navbar-nav a {
@@ -547,6 +574,7 @@ height: 80vh;
 
 .dropdown-menu li {
 color: inherit;
+margin-left: 0;
 }
 .dropdown-item:hover {
   background-color:inherit;
