--- a/css/my-css.css
+++ b/css/my-css.css
@@ -564,8 +564,9 @@ margin-left: 20px;
  color: white;
  position: absolute;
  right: 0px;
- top: -10px;
- font-size: 70px;
+ top: -30px;
+ font-size: 50px!important
+ ;
 }
 .navbar-collapse {
   height: 100vh;
