--- a/css/my-css.css
+++ b/css/my-css.css
@@ -505,6 +505,9 @@ background-size: cover; /* Resize the background image to cover the entire conta
   letter-spacing: 3px;
   border-bottom: ;
 }  
+.side-menu-overlay {
+z-index: 1000;
+}
 
 .dropdown-menu {
   background-color: inherit;
@@ -563,7 +566,7 @@ margin-left: 20px;
  background-color: transparent;
  color: white;
  position: absolute;
- right: 0px;
+ right: -25px;
  top: -30px;
  font-size: 50px!important
  ;
