--- a/css/nedzink.css
+++ b/css/nedzink.css
@@ -11,29 +11,39 @@ body.all-loaded {
   opacity: 1;
 }
 .scroll-top {
-
-display: none;
-width: 50px;
-height: 50px;
-  position: fixed; /* Fixed/sticky position */
-  bottom: 30px; /* Place the button at the bottom of the page */
-  right: 20px;
-  z-index: 2000; /* Make sure it does not overlap */
-  background-color: rgb(54, 54, 54);
-  border-radius: 50px;
- 
+  height: 60px;
+  width: 45px;
+  display: none;
+  padding: 5px;
+  position: fixed;
+  /*Fixed/stickyposition*/bottom: 30px;
+  /*Placethebuttonatthebottomofthepage*/right: 20px;
+  z-index: 1034;
+  /*Makesureitdoesnotoverlap*/background-color: rgb(54, 54, 54);
+  border-radius: 5px;
   cursor: pointer;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
 }
-.scroll-top p {
+.scroll-top div {
   text-align: center;
-  color:#777777;
+  color:#ffffff;
+  margin-top: -10px;
 }
-.scroll-top-icon:hover {
+@media only screen and (min-width: 1200px) {
+.scroll-top:hover .scroll-top-icon {
   transform: rotate(360deg);
 }
+}
 .scroll-top-icon {
-  width: 50px;
-  padding: 10px;
+  display: block;
+  width: 25px;
+  padding-top: 5px;
+  padding-bottom: 3px;
+  margin-left: auto;
+  margin-right: auto;
   transition: width 0.25s, height 0.25s, transform 0.25s;
  
   filter: -webkit-filter: grayscale(1) invert(1); filter: grayscale(1) invert(1);
@@ -81,24 +91,27 @@ font-style: italic;
     padding-bottom: 20px;
   }
   .scroll-top {
-width: 40px;
-height: 40px;
-bottom: 10px;
-right: 10px;
-  }
- .scroll-top:hover {
-  background-color: rgb(54, 54, 54);
-  filter: unset;
- }
- .scroll-top p {
-display: none;
-
- }
- .scroll-top-icon {
-  width: 40px;
- 
-
- }
+   border-radius: 5px;
+   -webkit-border-radius: 5px;
+   -moz-border-radius: 5px;
+   -ms-border-radius: 5px;
+   -o-border-radius: 5px;
+   width: unset;
+   height: unset;
+   right: 10px;
+   padding: 0 5px;
+}
+    
+     .scroll-top div {
+    font-size: 10px;
+    padding-bottom: 5px;
+    
+     }
+     .scroll-top-icon {
+    padding-bottom: 9px;
+     
+    
+     }
 
 }
 .black-background {
@@ -284,11 +297,11 @@ padding-top: 0px;
     transition: .5s ease;
     background-color: #ffffff44;
   }
-  
+  @media only screen and (min-width: 1200px) {
   .gallery-container:hover .gallery-overlay {
     opacity: 1;
   }
-  
+}
   .text {
     color: white;
     font-size: 20px;
@@ -313,17 +326,13 @@ padding-top: 0px;
 }
 
 
-
+@media only screen and (min-width: 1200px) {
 .filter-button:hover {
   background-color: rgb(48, 48, 48);
   color: white;
   }
-  @media only screen and (max-width: 992px) {
-    .filter-button:hover {
-      background-color: rgb(255, 255, 255);
-      color: #000000;
-      }
-      }
+}
+  
   .filter-button.active {
 
 background-color: rgb(48, 48, 48);
@@ -392,12 +401,13 @@ margin-top: 10px;
 text-align: center;
 }
 
-
+@media only screen and (min-width: 1200px) {
 .downloads-section div a img:hover {
   position: relative;
   top: 1px;
   left: 1px;
   box-shadow: rgb(167, 167, 167) 2px 2px 5px;
+}
 }
 .downloads-container {
   margin-top: -20px;
@@ -543,11 +553,11 @@ margin: 20px 0 20px 0;
   margin-top: 0px;
 
 }
-
+@media only screen and (min-width: 1200px) {
 .nav-pills .nav-link:hover {
   font-weight: bold;
   }
-  
+}
   .nav-pills .nav-link.active {
   background-color: transparent;
   color:#000000;
@@ -758,7 +768,18 @@ font-size: 13px;
 
 
 /* #region Form Section */
-
+label {
+  position: relative;
+}
+.required-indicator {
+  color: rgb(185, 1, 1);
+  display: none;
+  position: absolute;
+  top:5px;
+  right: 5px;
+  font-size: 30px;
+  line-height: 1;
+}
 .contact-form {
   padding-top: 70px;
   padding-bottom: 60px;
@@ -776,12 +797,10 @@ font-size: 13px;
     box-shadow:none!important;
 }
 
-input:required {
-  border-color: red;
+input:required + .required-indicator, textarea:required + .required-indicator {
+  display: block;
 }
-textarea:required {
-  border-color: red;
-}
+
 .contact-form input[type='text'], .contact-form input[type='tel'], .contact-form select {
   height: 53px;
 }
