--- a/css/my-css.css
+++ b/css/my-css.css
@@ -503,7 +503,7 @@ background-size: cover; /* Resize the background image to cover the entire conta
   text-transform: uppercase;
   line-height: 3;
   letter-spacing: 3px;
-  border-bottom: ;
+ 
 }  
 .side-menu-overlay {
 z-index: 1000;
@@ -522,11 +522,12 @@ z-index: 1000;
 
 }
 .dropdown-item {
-  font-size: 11px;
+  font-size: 12px;
   letter-spacing: 2px;
 text-transform: capitalize!important;
 font-weight: lighter!important;
 color:rgba(173, 173, 173);
+
 
 }
 .dropdown-menu li {
@@ -540,6 +541,7 @@ margin-left: 20px;
 #side-menu {
   padding: 10px;
   background-color: rgb(26, 26, 26);
+  overflow-x:hidden;
 }
 .top-header {
   display: none;
